# teammater

./: CLAUDE.md  Caddyfile  MEMO.md  Makefile  README.md  REQUIREMENTS.md  RUST_SERVER.md  SPEC.md  TODO.md  actions.js  config.js  connectors.js  index.css  index.html  index.js  neco.html  obs.html  obs.js  prog.md  teammater.js  test-llm.html  utils.js  wsformat.md
core/: action-registry.js  context-builder.js  module-manager.js  ui-builder.js
modules/: base-module.js
modules/echowire/: module.js
modules/llm/: module.js
modules/minecraft/: module.js
modules/music-queue/: SPEC.md  module.js
modules/obs/: module.js
modules/twitch-chat/: module.js
modules/twitch-eventsub/: SPEC.md  module.js
modules/twitch-stream/: module.js
server/: .gitignore  CERTIFICATE_SETUP.md  Cargo.toml  IMPLEMENTATION.md  README.md  SPEC.md
server/src/: ble.rs  main.rs  tls.rs
